[tool.poetry]
name = "obd2api"
version = "0.0.1"
description = "REST API for OBD-II"
authors = ["navanchauhan <navanchauhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
obd = "^0.7.1"
fastapi = "^0.74.0"

[tool.poetry.dev-dependencies]
ELM327-emulator = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
